--- a/flutter_layout/pubspec.yaml
+++ b/flutter_layout/pubspec.yaml
@@ -41,9 +41,18 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+   - images/01.jpeg
+   - images/02.jpeg
+   - images/03.jpeg
+   - images/04.jpeg
+   - images/05.jpeg
+   - images/06.jpeg
+   - images/07.jpeg
+   - images/08.jpeg
+   - images/09.jpeg
+   - images/10.jpeg
+   - images/11.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
